# sight

./: .gitlab-ci.yml  CMakeLists.txt
Apps/OgreViewer/rc/configurations/: OgreGenericScene.xml  OgreNegato2D.xml
Bundles/LeafActivity/ioActivity/rc/: plugin.xml
Bundles/LeafUI/guiQtQuick/: CMakeLists.txt  Properties.cmake
Bundles/LeafUI/guiQtQuick/include/guiQtQuick/: Namespace.hpp  Plugin.hpp
Bundles/LeafUI/guiQtQuick/include/guiQtQuick/action/: SStarter.hpp
Bundles/LeafUI/guiQtQuick/include/guiQtQuick/frame/: QuickFrame.hpp
Bundles/LeafUI/guiQtQuick/rc/: plugin.xml  root.qml
Bundles/LeafUI/guiQtQuick/rc/Ui/: header.qml  navigationDrawer.qml  qmldir
Bundles/LeafUI/guiQtQuick/src/guiQtQuick/: Plugin.cpp
Bundles/LeafUI/guiQtQuick/src/guiQtQuick/action/: SStarter.cpp
Bundles/LeafUI/guiQtQuick/src/guiQtQuick/frame/: QuickFrame.cpp
Bundles/LeafVisu/visuVTKQuick/: CMakeLists.txt  Properties.cmake
Bundles/LeafVisu/visuVTKQuick/rc/: plugin.xml
Bundles/core/appQml/: Properties.cmake
Bundles/core/appQml/rc/: plugin.xml
Bundles/core/servicesReg/: CMakeLists.txt
Bundles/core/servicesReg/rc/: appConfig.xsd
Bundles/io/ioVTK/: CMakeLists.txt  Properties.cmake
Bundles/ui/uiIO/: CMakeLists.txt  Properties.cmake
Bundles/ui/uiImageQt/: CMakeLists.txt
Bundles/ui/uiVisuQt/: CMakeLists.txt
Bundles/video/videoOrbbec/: CMakeLists.txt  Properties.cmake
Bundles/visu/visuVTKAdaptor/: CMakeLists.txt  Properties.cmake
Bundles/visu/visuVTKAdaptor/include/visuVTKAdaptor/: SQImage.hpp  SQImageSlice.hpp  SQMaterial.hpp  SQMedical3DCamera.hpp  SQMesh.hpp  SQMeshNormals.hpp  SQNegatoMPR.hpp  SQNegatoOneSlice.hpp  SQNegatoSlicingInteractor.hpp  SQNegatoWindowingInteractor.hpp  SQProbeCursor.hpp  SQSlicesCursor.hpp  SQSnapshot.hpp  SQTexture.hpp  SQTransform.hpp
Bundles/visu/visuVTKAdaptor/src/visuVTKAdaptor/: Plugin.cpp  SImageMultiDistances.cpp  SNegatoMPR.cpp  SQImage.cpp  SQImageSlice.cpp  SQMaterial.cpp  SQMedical3DCamera.cpp  SQMesh.cpp  SQMeshNormals.cpp  SQNegatoMPR.cpp  SQNegatoOneSlice.cpp  SQNegatoSlicingInteractor.cpp  SQNegatoWindowingInteractor.cpp  SQProbeCursor.cpp  SQSlicesCursor.cpp  SQSnapshot.cpp  SQTexture.cpp  SQTransform.cpp
Bundles/visu/visuVTKQt/: CMakeLists.txt
Bundles/visu/vtkSimpleNegato/: CMakeLists.txt
CMake/modules/: PrecompiledHeader.cmake
Samples/Examples/Ex05QtQuick/: Properties.cmake
Samples/Examples/Ex05QtQuick/rc/: frame.qml  plugin.xml
Samples/ProofsOfConcept/PoCMultiTexturedMesh/: CMakeLists.txt  Properties.cmake  README.md
Samples/ProofsOfConcept/PoCMultiTexturedMesh/rc/: plugin.xml
Samples/Tutorials/Qml/Tuto02/: Properties.cmake  TutoQML.files
Samples/Tutorials/Qml/Tuto08/: CMakeLists.txt  Properties.cmake
Samples/Tutorials/Qml/Tuto3D/: Properties.cmake  Tuto3D.files
Samples/Tutorials/Tuto08GenericScene/rc/: plugin.xml
Samples/Tutorials/TutoQML/: Properties.cmake
Samples/Tutorials/TutoQML/rc/: Rect.qml  app.qml  plugin.xml
SrcLib/core/fwGuiQt/: CMakeLists.txt
SrcLib/core/fwGuiQt/include/fwGuiQt/: IQtQmlObject.hpp  QtObjectHolder.hpp  QtQmlEngine.hpp  QtQmlHelper.hpp  QtQmlInstancier.hpp  QtQmlObject.hxx  QtQmlRegistar.hxx  QtQmlType.hxx
SrcLib/core/fwGuiQt/src/fwGuiQt/: IQtQmlObject.cpp  QtObjectHolder.cpp  QtQmlEngine.cpp  QtQmlHelper.cpp  QtQmlInstancier.cpp
SrcLib/core/fwGuiQuick/: CMakeLists.txt  Properties.cmake
SrcLib/core/fwGuiQuick/test/: Properties.cmake
SrcLib/core/fwIO/: CMakeLists.txt
SrcLib/core/fwIO/include/fwIO/: IQmlReader.hpp
SrcLib/core/fwIO/src/fwIO/: IQmlReader.cpp
SrcLib/core/fwQtQuick/: CMakeLists.txt  Properties.cmake
SrcLib/core/fwQtQuick/include/fwQtQuick/: Engine.hpp
SrcLib/core/fwQtQuick/include/fwQtQuick/code/: Compiler.hpp
SrcLib/core/fwQtQuick/include/fwQtQuick/render/: FboOffscreenWindow.hpp  FboRenderer.hpp  vtkQuickItem.hpp
SrcLib/core/fwQtQuick/include/fwQtQuick/typeInfo/: Class.hpp  Enum.hpp  EnumItem.hpp  List.hpp  Method.hpp  Property.hpp  Symbol.hpp
SrcLib/core/fwQtQuick/include/fwQtQuick/utils/: IO.hpp  Register.hpp
SrcLib/core/fwQtQuick/src/fwQtQuick/: Engine.cpp
SrcLib/core/fwQtQuick/src/fwQtQuick/code/: Compiler.cpp
SrcLib/core/fwQtQuick/src/fwQtQuick/render/: FboOffscreenWindow.cpp  FboRenderer.cpp  vtkQuickItem.cpp
SrcLib/core/fwQtQuick/src/fwQtQuick/typeInfo/: Class.cpp  Enum.cpp  EnumItem.cpp  List.cpp  Method.cpp  Property.cpp  Symbol.cpp
SrcLib/core/fwQtQuick/src/fwQtQuick/utils/: IO.cpp  Register.cpp
SrcLib/core/fwServices/: CMakeLists.txt
SrcLib/core/fwServices/include/fwServices/: IQHasServices.hpp  IQmlEngine.hpp  IQmlService.hpp  IQmlService.hxx  IQtQmlObject.hpp  IQtQmlType.hpp  QmlAppConfigManager.hpp  QtObjectHolder.hpp  QtQmlInstancier.hxx  QtQmlObject.hxx  QtQmlRegistar.hxx  QtQmlType.hxx  macros.hpp
SrcLib/core/fwServices/src/fwServices/: AppConfigManager.cpp  IQHasServices.cpp  IQmlEngine.cpp  IQmlService.cpp  IQtQmlObject.cpp  IQtQmlType.cpp  QmlAppConfigManager.cpp  QtObjectHolder.cpp  QtQmlInstancier.cpp
SrcLib/core/fwThread/: CMakeLists.txt
SrcLib/patch/fwMDSemanticPatch/rc/: V10ToV11.graphlink  V11.versions  V11ToV10.graphlink
SrcLib/visu/fwRenderOgre/: CMakeLists.txt
SrcLib/visu/fwRenderVTK/: CMakeLists.txt  Properties.cmake
Tutorial/TestQML/: CMakeLists.txt  Properties.cmake
Tutorial/TestQML/rc/: plugin.xml
Utilities/astra/astraRecord3Streams/: Properties.cmake
Utilities/astra/astraViewer/: CMakeLists.txt  Properties.cmake
Utilities/astra/astraViewer/src/: main.cpp
(+203 files in other folders)
